# MeshSimplify

./: CMakeLists.txt  MeshSimplify.sln  MeshSimplify.vcxproj  MeshSimplify.vcxproj.filters  README.md  common.cpp  common.h  heap.cpp  heap.h  main.cpp  object.cpp  object.h
include/: common.h  heap.h  object.h
src/: common.cpp  heap.cpp  main.cpp  object.cpp
